--- a/stylehmmenu.css
+++ b/stylehmmenu.css
@@ -71,3 +71,10 @@ body{
 .btn:hover{
 	opacity: 0.7;
 }
+
+
+.wlhover:hover{
+	cursor: pointer;
+	border: 3px dotted #ff7a59;
+    color: #ff7a59;
+}
